--- a/package.json
+++ b/package.json
@@ -1,24 +1,21 @@
 {
-  "name": "electron-with-create-react-app",
-  "version": "0.1.0",
-  "private": true,
-  "devDependencies": {
-    "electron": "^1.8.8",
-    "foreman": "^2.0.0",
-    "react-scripts": "0.8.5"
+  "name": "jewelry-app",
+  "version": "1.0.0",
+  "description": "Anavekara Jewelry Works Desktop Application",
+  "main": "dist/main.js",
+  "scripts": {
+    "start": "tsc && electron .",
+    "build": "tsc && copyfiles -u 1 src/index.html src/styles.css dist/"
   },
   "dependencies": {
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1"
+     "electron": "^22.0.0",
+    "axios": "^latest-version"
   },
-  "homepage": "./",
-  "main": "src/electron-starter.js",
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "electron": "electron .",
-    "dev": "nf start -p 3000"
+  "devDependencies": {
+    "copyfiles": "^2.4.1",
+    "typescript": "^4.1.3",
+    "ts-node": "^latest-version",
+    "@types/node": "^latest-version",
+    "@types/electron": "^latest-version"
   }
 }
